Add new scrolling activity make it launcher, Add recycler view w header

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">b2bLogist</string>
+    <string name="title_activity_scrolling">ScrollingActivity</string>
 </resources>
