--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">b2bLogist</string>
-    <string name="title_activity_scrolling">ScrollingActivity</string>
+    <string name="app_name">Умная Логистика</string>
 </resources>
