surround with try load methods to prevent force close on errors, load more for comments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Умная Логистика</string>
     <string name="post">Пост</string>
+    <string name="error_on_load">Ошибка при загрузке</string>
 </resources>
