kotlin style check for empty data (null or blank) for group header and posts, gone by default data's views

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Умная Логистика</string>
     <string name="post">Пост</string>
     <string name="error_on_load">Ошибка при загрузке</string>
+    <string name="followers">%d Подписчиков</string>
 </resources>
