reduce the number of lines for list of posts, add read more text instead

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="followers">%d подписчиков</string>
     <string name="no">Нет</string>
     <string name="views">%s просмотров</string>
+    <string name="read_more"><u>Читать дальше…</u></string>
 </resources>
